methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	var vuVert: Boolean = false
  	if (estFaceMur()==true) {
      vuVert = false
    } else {
      forward();
      if (getCouleurSol()==Color.green) {
      vuVert=true
    } else {
      vuVert = false
    }
  	return vuVert
    }
  	
}

